# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/scripts/: test_endpoints.sh
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/model/: login.rs  logout.rs  mod.rs  signup.rs  verify2fa.rs  verifytoken.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
