[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.6"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.43"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
rand = "0.10.0"
redis = { version = "1.0.5", features = ["tokio-comp"] }
reqwest = { version = "0.13.1", features = ["cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
reqwest = {version = "0.13.1", default-features=false, features=["json"]}
quickcheck = "1"
quickcheck_macros = "1"
fake = { version = "2", features = ["derive"] }
